--- a/ambient-stream-config.json
+++ b/ambient-stream-config.json
@@ -2,21 +2,19 @@
     "streams": [
         {
             "name": "LOTR",
-            "baseTracks": [
-                "aud/lotr.mp3"
-            ],
-            "bRoll": [
+            "baseTrack": "aud/lotr.mp3",
+            "bRolls": [
                 {
-                    "file": "aud/birds.mp3",
-                    "minInterval": 10,
-                    "maxInterval": 30,
-                    "volume": 0.8
+                    "name": "Birds",
+                    "src": "aud/birds.mp3",
+                    "volume": 0.8,
+                    "loop": true
                 },
                 {
-                    "file": "aud/rain.mp3",
-                    "minInterval": 20,
-                    "maxInterval": 40,
-                    "volume": 0.5
+                    "name": "Rain",
+                    "src": "aud/rain.mp3",
+                    "volume": 0.5,
+                    "loop": true
                 }
             ]
         }
