--- a/ambient-stream-config.json
+++ b/ambient-stream-config.json
@@ -1,22 +1,34 @@
 {
     "streams": [
-        {
-            "name": "LOTR",
+    {
+        "name": "LOTR",
             "baseTrack": "aud/lotr.mp3",
             "bRolls": [
-                {
-                    "name": "Birds",
-                    "src": "aud/birds.mp3",
-                    "volume": 0.6,
-                    "loop": true
-                },
-                {
-                    "name": "Rain",
-                    "src": "aud/rain.mp3",
-                    "volume": 0.2,
-                    "loop": true
-                }
+            {
+                "name": "Birds",
+                "src": "aud/birds.mp3",
+                "volume": 0.6,
+                "loop": true
+            },
+            {
+                "name": "Rain",
+                "src": "aud/rain.mp3",
+                "volume": 0.2,
+                "loop": true
+            }
             ]
+    },
+    {
+        "name": "Chopin",
+        "baseTrack": "aud/chopin-mazurka.mp3",
+        "bRolls": [
+        {
+            "name": "Fireplace",
+            "src": "aud/fireplace.mp3",
+            "volume": 0.6,
+            "loop": true
         }
+        ]
+    }
     ]
 }
