--- a/ambient-stream-config.json
+++ b/ambient-stream-config.json
@@ -15,6 +15,12 @@
                 "src": "aud/rain.mp3",
                 "volume": 0.2,
                 "loop": true
+            },
+            {
+                "name": "Fireplace",
+                "src": "aud/fireplace.mp3",
+                "volume": 0.6,
+                "loop": true
             }
             ]
     },
