--- a/.github/workflows/append_geet.yml
+++ b/.github/workflows/append_geet.yml
@@ -17,7 +17,7 @@ jobs:
           echo "${{ github.event.client_payload.data }}" >> geets.tsv
           git config --global user.name 'github-actions[bot]'
           git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-          git add geets.tsv
+          git add geets.csv
           git commit -m "Append new geet"
           git push
 
